[gd_scene load_steps=6 format=3 uid="uid://bg3rkp6ol2kis"]

[ext_resource type="Script" uid="uid://5e8oy1ujwg7b" path="res://scripts/menu/menu.gd" id="1_t0a87"]
[ext_resource type="Texture2D" uid="uid://dmti0du4mgs0c" path="res://assets/buttons/buttonBack.png" id="2_037ec"]
[ext_resource type="PackedScene" uid="uid://bpgnuyuwm841o" path="res://scenes/menu/level_icons.tscn" id="2_y1o0p"]
[ext_resource type="Texture2D" uid="uid://dx4m0u2fi7pxw" path="res://assets/buttons/buttonBack_pressed.png" id="3_y1o0p"]
[ext_resource type="Texture2D" uid="uid://dxh04h22dfuno" path="res://assets/buttons/buttonBack_disabled.png" id="4_r8yej"]

[node name="Menu" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t0a87")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.537255, 0.682353, 0.411765, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainerTop" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TextureButton" type="TextureButton" parent="VBoxContainer/HBoxContainerTop"]
layout_mode = 2
texture_normal = ExtResource("2_037ec")
texture_pressed = ExtResource("3_y1o0p")
texture_disabled = ExtResource("4_r8yej")

[node name="LevelIcons" parent="." instance=ExtResource("2_y1o0p")]

[connection signal="button_down" from="VBoxContainer/HBoxContainerTop/TextureButton" to="." method="_on_texture_button_button_down"]
[connection signal="button_up" from="VBoxContainer/HBoxContainerTop/TextureButton" to="." method="_on_texture_button_button_up"]
